deploy: 36e9b5efe9b17fb119196cf146d402207dc0be9a

--- a/classes/_thread_.threadspace.html
+++ b/classes/_thread_.threadspace.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ThreadSpace | @suin/runspace - v2.0.0</title>
-	<meta name="description" content="Documentation for @suin/runspace - v2.0.0">
+	<title>ThreadSpace | @suin/runspace - v2.1.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v2.1.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v2.0.0</a>
+					<a href="../index.html" class="title">@suin/runspace - v2.1.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -105,6 +105,7 @@
 							<h3>Accessors</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-get-signature tsd-parent-kind-class"><a href="_thread_.threadspace.html#isrunning" class="tsd-kind-icon">is<wbr>Running</a></li>
+								<li class="tsd-kind-get-signature tsd-parent-kind-class"><a href="_thread_.threadspace.html#stdout" class="tsd-kind-icon">stdout</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -138,7 +139,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L22">thread.ts:22</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L23">thread.ts:23</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -165,7 +166,7 @@
 					<div class="tsd-signature tsd-kind-icon">#events<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">EventEmitter</span><span class="tsd-signature-symbol"> = new EventEmitter()</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L21">thread.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L22">thread.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -175,7 +176,7 @@
 					<div class="tsd-signature tsd-kind-icon">#is<wbr>Online<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L22">thread.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L23">thread.ts:23</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -185,7 +186,7 @@
 					<div class="tsd-signature tsd-kind-icon">#worker<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Worker</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L20">thread.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L21">thread.ts:21</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -202,10 +203,27 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L33">thread.ts:33</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L34">thread.ts:34</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-get-signature tsd-parent-kind-class">
+					<a name="stdout" class="tsd-anchor"></a>
+					<h3>stdout</h3>
+					<ul class="tsd-signatures tsd-kind-get-signature tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">get</span> stdout<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Readable</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L38">thread.ts:38</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Readable</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -222,7 +240,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L90">thread.ts:90</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L95">thread.ts:95</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -248,7 +266,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#on">on</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L59">thread.ts:59</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L64">thread.ts:64</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -266,7 +284,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#on">on</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L60">thread.ts:60</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L65">thread.ts:65</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -284,7 +302,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#on">on</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L61">thread.ts:61</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L66">thread.ts:66</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -310,7 +328,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L82">thread.ts:82</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L87">thread.ts:87</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -333,7 +351,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L86">thread.ts:86</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L91">thread.ts:91</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -350,7 +368,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L74">thread.ts:74</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L79">thread.ts:79</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -373,7 +391,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L70">thread.ts:70</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L75">thread.ts:75</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -391,7 +409,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#send">send</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L41">thread.ts:41</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L46">thread.ts:46</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -415,7 +433,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#stop">stop</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L49">thread.ts:49</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L54">thread.ts:54</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -433,7 +451,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#waitmessage">waitMessage</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L45">thread.ts:45</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L50">thread.ts:50</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -457,7 +475,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#waitstart">waitStart</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L37">thread.ts:37</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L42">thread.ts:42</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -475,7 +493,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#waitstop">waitStop</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L53">thread.ts:53</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L58">thread.ts:58</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -537,6 +555,9 @@
 							</li>
 							<li class=" tsd-kind-get-signature tsd-parent-kind-class">
 								<a href="_thread_.threadspace.html#isrunning" class="tsd-kind-icon">is<wbr>Running</a>
+							</li>
+							<li class=" tsd-kind-get-signature tsd-parent-kind-class">
+								<a href="_thread_.threadspace.html#stdout" class="tsd-kind-icon">stdout</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-private">
 								<a href="_thread_.threadspace.html#handlesystemmessage" class="tsd-kind-icon">handle<wbr>System<wbr>Message</a>
