--- a/classes/_childprocess_.childprocessspace.html
+++ b/classes/_childprocess_.childprocessspace.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ChildProcessSpace | @suin/runspace - v2.0.0</title>
-	<meta name="description" content="Documentation for @suin/runspace - v2.0.0">
+	<title>ChildProcessSpace | @suin/runspace - v2.1.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v2.1.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v2.0.0</a>
+					<a href="../index.html" class="title">@suin/runspace - v2.1.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -105,6 +105,7 @@
 							<h3>Accessors</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-get-signature tsd-parent-kind-class"><a href="_childprocess_.childprocessspace.html#isrunning" class="tsd-kind-icon">is<wbr>Running</a></li>
+								<li class="tsd-kind-get-signature tsd-parent-kind-class"><a href="_childprocess_.childprocessspace.html#stdout" class="tsd-kind-icon">stdout</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -136,7 +137,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L22">childProcess.ts:22</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L23">childProcess.ts:23</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -163,7 +164,7 @@
 					<div class="tsd-signature tsd-kind-icon">#events<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">EventEmitter</span><span class="tsd-signature-symbol"> = new EventEmitter()</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L21">childProcess.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L22">childProcess.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -173,7 +174,7 @@
 					<div class="tsd-signature tsd-kind-icon">#is<wbr>Running<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L22">childProcess.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L23">childProcess.ts:23</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -183,7 +184,7 @@
 					<div class="tsd-signature tsd-kind-icon">#worker<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">ChildProcess</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L20">childProcess.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L21">childProcess.ts:21</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -200,10 +201,27 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L32">childProcess.ts:32</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L33">childProcess.ts:33</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-get-signature tsd-parent-kind-class">
+					<a name="stdout" class="tsd-anchor"></a>
+					<h3>stdout</h3>
+					<ul class="tsd-signatures tsd-kind-get-signature tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">get</span> stdout<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Readable</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L37">childProcess.ts:37</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Readable</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -220,7 +238,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L85">childProcess.ts:85</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L90">childProcess.ts:90</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -246,7 +264,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#on">on</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L62">childProcess.ts:62</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L67">childProcess.ts:67</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -264,7 +282,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#on">on</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L63">childProcess.ts:63</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L68">childProcess.ts:68</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -282,7 +300,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#on">on</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L64">childProcess.ts:64</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L69">childProcess.ts:69</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -308,7 +326,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L81">childProcess.ts:81</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L86">childProcess.ts:86</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -325,7 +343,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L73">childProcess.ts:73</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L78">childProcess.ts:78</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -349,7 +367,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#send">send</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L40">childProcess.ts:40</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L45">childProcess.ts:45</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -373,7 +391,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#stop">stop</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L48">childProcess.ts:48</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L53">childProcess.ts:53</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -391,7 +409,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#waitmessage">waitMessage</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L44">childProcess.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L49">childProcess.ts:49</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -415,7 +433,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#waitstart">waitStart</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L36">childProcess.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L41">childProcess.ts:41</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -433,7 +451,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#waitstop">waitStop</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.ts#L56">childProcess.ts:56</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/childProcess.ts#L61">childProcess.ts:61</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -495,6 +513,9 @@
 							</li>
 							<li class=" tsd-kind-get-signature tsd-parent-kind-class">
 								<a href="_childprocess_.childprocessspace.html#isrunning" class="tsd-kind-icon">is<wbr>Running</a>
+							</li>
+							<li class=" tsd-kind-get-signature tsd-parent-kind-class">
+								<a href="_childprocess_.childprocessspace.html#stdout" class="tsd-kind-icon">stdout</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-private">
 								<a href="_childprocess_.childprocessspace.html#handlesystemmessage" class="tsd-kind-icon">handle<wbr>System<wbr>Message</a>
