--- a/interfaces/_index_.space.html
+++ b/interfaces/_index_.space.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Space | @suin/runspace - v2.0.0</title>
-	<meta name="description" content="Documentation for @suin/runspace - v2.0.0">
+	<title>Space | @suin/runspace - v2.1.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v2.1.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v2.0.0</a>
+					<a href="../index.html" class="title">@suin/runspace - v2.1.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -92,6 +92,7 @@
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_index_.space.html#isrunning" class="tsd-kind-icon">is<wbr>Running</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_index_.space.html#stdout" class="tsd-kind-icon">stdout</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -116,7 +117,7 @@
 					<div class="tsd-signature tsd-kind-icon">is<wbr>Running<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/index.ts#L8">index.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/index.ts#L10">index.ts:10</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -124,6 +125,16 @@
 							<p>Returns true if this space is running.</p>
 						</div>
 					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="stdout" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> stdout</h3>
+					<div class="tsd-signature tsd-kind-icon">stdout<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Readable</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/index.ts#L12">index.ts:12</a></li>
+						</ul>
+					</aside>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
@@ -140,7 +151,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/index.ts#L43">index.ts:43</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/index.ts#L47">index.ts:47</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -164,7 +175,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/index.ts#L44">index.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/index.ts#L49">index.ts:49</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -181,7 +192,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/index.ts#L45">index.ts:45</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/index.ts#L51">index.ts:51</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -207,7 +218,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/index.ts#L19">index.ts:19</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/index.ts#L23">index.ts:23</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -238,7 +249,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/index.ts#L29">index.ts:29</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/index.ts#L33">index.ts:33</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -260,7 +271,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/index.ts#L24">index.ts:24</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/index.ts#L28">index.ts:28</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -288,7 +299,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/index.ts#L13">index.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/index.ts#L17">index.ts:17</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -310,7 +321,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/index.ts#L34">index.ts:34</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/index.ts#L38">index.ts:38</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -371,6 +382,9 @@
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_index_.space.html#isrunning" class="tsd-kind-icon">is<wbr>Running</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_index_.space.html#stdout" class="tsd-kind-icon">stdout</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-interface">
 								<a href="_index_.space.html#on" class="tsd-kind-icon">on</a>
