--- a/classes/_thread_.threadspace.html
+++ b/classes/_thread_.threadspace.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ThreadSpace | @suin/runspace - v2.1.0</title>
-	<meta name="description" content="Documentation for @suin/runspace - v2.1.0">
+	<title>ThreadSpace | @suin/runspace - v2.2.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v2.2.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v2.1.0</a>
+					<a href="../index.html" class="title">@suin/runspace - v2.2.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -98,6 +98,7 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><a href="_thread_.threadspace.html#_events" class="tsd-kind-icon">#events</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><a href="_thread_.threadspace.html#_isonline" class="tsd-kind-icon">#is<wbr>Online</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><a href="_thread_.threadspace.html#_terminatechannel" class="tsd-kind-icon">#terminate<wbr>Channel</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><a href="_thread_.threadspace.html#_worker" class="tsd-kind-icon">#worker</a></li>
 							</ul>
 						</section>
@@ -139,7 +140,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L23">thread.ts:23</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L24">thread.ts:24</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -166,7 +167,7 @@
 					<div class="tsd-signature tsd-kind-icon">#events<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">EventEmitter</span><span class="tsd-signature-symbol"> = new EventEmitter()</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L22">thread.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L23">thread.ts:23</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -176,7 +177,17 @@
 					<div class="tsd-signature tsd-kind-icon">#is<wbr>Online<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L23">thread.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L24">thread.ts:24</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-private">
+					<a name="_terminatechannel" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> <span class="tsd-flag ts-flagPrivate">Private</span> #terminate<wbr>Channel</h3>
+					<div class="tsd-signature tsd-kind-icon">#terminate<wbr>Channel<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">MessageChannel</span><span class="tsd-signature-symbol"> = new MessageChannel()</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L22">thread.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -186,7 +197,7 @@
 					<div class="tsd-signature tsd-kind-icon">#worker<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Worker</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L21">thread.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L21">thread.ts:21</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -203,7 +214,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L34">thread.ts:34</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L35">thread.ts:35</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
@@ -220,7 +231,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L38">thread.ts:38</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L39">thread.ts:39</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Readable</span></h4>
@@ -240,7 +251,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L95">thread.ts:95</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L100">thread.ts:100</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -266,7 +277,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#on">on</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L64">thread.ts:64</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L67">thread.ts:67</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -284,7 +295,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#on">on</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L65">thread.ts:65</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L68">thread.ts:68</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -302,7 +313,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#on">on</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L66">thread.ts:66</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L69">thread.ts:69</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -328,7 +339,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L87">thread.ts:87</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L92">thread.ts:92</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -351,7 +362,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L91">thread.ts:91</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L96">thread.ts:96</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -368,7 +379,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L79">thread.ts:79</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L84">thread.ts:84</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -391,7 +402,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L75">thread.ts:75</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L78">thread.ts:78</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -409,7 +420,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#send">send</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L46">thread.ts:46</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L47">thread.ts:47</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -433,7 +444,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#stop">stop</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L54">thread.ts:54</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L55">thread.ts:55</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -451,7 +462,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#waitmessage">waitMessage</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L50">thread.ts:50</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L51">thread.ts:51</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -475,7 +486,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#waitstart">waitStart</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L42">thread.ts:42</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L43">thread.ts:43</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -493,7 +504,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#waitstop">waitStop</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.1.0/thread.ts#L58">thread.ts:58</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.0/thread.ts#L61">thread.ts:61</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -549,6 +560,9 @@
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-private">
 								<a href="_thread_.threadspace.html#_isonline" class="tsd-kind-icon">#is<wbr>Online</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-private">
+								<a href="_thread_.threadspace.html#_terminatechannel" class="tsd-kind-icon">#terminate<wbr>Channel</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-private">
 								<a href="_thread_.threadspace.html#_worker" class="tsd-kind-icon">#worker</a>
